# svgplot

./: CMakeLists.txt  README.md  svgplot.h
cmake_support/: svgplotConfig.cmake.in
example/: CMakeLists.txt  Makefile  example.c
src/: CMakeLists.txt  space_iter.h  svgplot.c
